geo/gpxsee/patches/patch-src_map_albersequal_h
$OpenBSD: patch-src_map_albersequal_h,v 1.2 2020/01/24 08:02:36 landry Exp $
https://github.com/tumic0/GPXSee/issues/266
../src/map/albersequal.h:28:9: error: expected member name or ';' after declaration specifiers
        double _C;
        ~~~~~~ ^
/usr/include/ctype.h:50:12: note: expanded from macro '_C'
#define _C      0x20


Index: src/map/albersequal.h
--- src/map/albersequal.h.orig
+++ src/map/albersequal.h
@@ -25,7 +25,7 @@ class AlbersEqual : public CT (private)
 
 	double _a2;
 	double _rho0;
-	double _C;
+	double C;
 	double _n;
 	double _e;
 	double _es;
